--- a/style.css
+++ b/style.css
@@ -206,4 +206,5 @@ body {
 	background-image: linear-gradient(var(--cor-fundo),var(--cor-fundo)), radial-gradient(circle at top left, #ff6600, #ffd000);
 	background-origin: border-box;
 	background-clip: content-box, border-box;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
