--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
 .cabecalho-menu-item {
 	font-size: 18px;
 	transition: .3s;
+	text-transform: uppercase;
 }
 .cabecalho-menu-item:hover {
 	color: var(--cor-texto-destaque);
@@ -241,4 +242,9 @@ body {
 	background-origin: border-box;
 	background-clip: content-box, border-box;
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+#servicos {
+	display: flex;
+	justify-content: center;
+	min-height: 100vh;
 }
