--- a/style.css
+++ b/style.css
@@ -176,6 +176,18 @@ body {
 	align-items: center;
 	justify-content: center;
 }
+#portifolio :nth-child(2) {
+	transition-delay: 400ms;
+}
+#portifolio :nth-child(3) {
+	transition-delay: 700ms;
+}
+#portifolio :nth-child(4) {
+	transition-delay: 1000ms;
+}
+#portifolio :nth-child(5) {
+	transition-delay: 1300ms;
+}
 .portifolio-titulo {
 	font-size: 35px;
 	text-transform: uppercase;
@@ -187,6 +199,27 @@ body {
 	padding: 50px;
 	align-items: center;
 	justify-content: center;
+}
+.oculto {
+	opacity: 0;
+	filter: blur(15px);
+	transition: all 2s;
+}
+.left {
+	
+	transform: translateX(-100%);
+	transition: all 2s;
+}
+.right {
+
+	transform: translateX(+100%);
+	transition: all 2s;
+}
+.exibir {
+	opacity: 1;
+	filter: blur(0);
+	transform: translateX(0);
+	transition: all 2s;
 }
 .card-texto {
 	display: flex;
